# aoc

./: .gitignore
aoc2019/: 1p1.py  1p2.py  2p1.py  2p2.py  3p1.py  3p2.py  4p1.py  4p2.py  5p1.py  5p2.py  6p1.py  6p2.py  7p1.py  7p2.py  8p1.py  8p2.py
aoc2020/: test.py
aoc2020/Day1/: Input.txt  Part1.py  Part2.py
aoc2020/Day10/: Input.txt  Part1.py  Part2.py
aoc2020/Day11/: Input.txt  Part1.py  Part2.py
aoc2020/Day12/: Input.txt  Part1.py  Part2.py
aoc2020/Day13/: Input.txt  Part1.py  Part2.py
aoc2020/Day14/: Input.txt  Part1.py  Part2.py
aoc2020/Day15/: Input.txt  Part1.py  Part2.py
aoc2020/Day16/: Input.txt  Part1.py  Part2.py
aoc2020/Day17/: Input.txt  Part1.py  Part2.py
aoc2020/Day18/: Input.txt  Part1.py  Part2.py
aoc2020/Day19/: Input.txt  Part1.py  Part2.py
aoc2020/Day2/: Part1.py  Part2.py
aoc2020/Day3/: Part1.py  Part2.py
aoc2020/Day4/: Input.txt  (+2 more)
aoc2021/: Base.h  CMakeLists.txt  FilesystemUtils.cpp  FilesystemUtils.h  Timer.h  Utils.cpp  Utils.h
aoc2022/: Base.h  CMakeLists.txt  Utils.cpp  Utils.h
aoc2022/Day1/: Part1.cpp  Part2.cpp
aoc2022/Day10/: Part1.cpp  Part2.cpp
aoc2022/Day12/: Part1.cpp  Part2.cpp
aoc2022/Day13/: Part1.cpp  Part2.cpp
aoc2022/Day14/: Part1.cpp  Part2.cpp
aoc2022/Day15/: Part1.cpp  Part2.cpp
aoc2022/Day2/: Part1.cpp  Part2.cpp
aoc2022/Day3/: Part1.cpp  Part2.cpp
aoc2022/Day4/: Part1.cpp  Part2.cpp
aoc2022/Day5/: Part1.cpp  Part2.cpp
aoc2022/Day6/: Part1.cpp  Part2.cpp
aoc2022/Day7/: Part1.cpp  Part2.cpp
aoc2022/Day8/: Part1.cpp  Part2.cpp
aoc2022/Day9/: Part1.cpp  Part2.cpp
(+34 files in other folders)
